Fix the layout of the nav on mobile screen

--- a/styles/profile-style.css
+++ b/styles/profile-style.css
@@ -199,12 +199,23 @@ footer h3 {
         gap: 1.5rem;
     }
 
-    header :nth-child(2) {
+    header > :nth-child(2) {
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column;*/
         align-items: center;
         padding: 0.9rem;
         margin-top: 1rem;
     }
+
+    header div div div{ /* Estos son los datos de arriba a la derecha*/
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        height: 3rem;
+        padding: 0;
+        margin: 0;
+        font-weight: 400;
+    }
+
 
 }
